Fixed mobile overflows, disabled mobile zoom, changed the way details are displayed, added return button in details.

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
   background-color: #ffffff;
   color: #202020;
   font-family: 'Mukta', sans-serif;
+  overflow-x: hidden;
 }
 
 input, textarea {
@@ -26,3 +27,18 @@ input, textarea {
   margin: 0;
   padding: 0;
 }
+
+* {
+  -webkit-tap-highlight-color: transparent; /* Prevents blue highlight on mobile. */
+}
+
+.noSelect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+
